    * It is now possible to enforce checkboxes in views upon view loading
      (needs to be confgured per view via the view editor)
    * Wiki Sidebar Snapin: showing navigation and quicksearch. OMD only.
    * Sidebar can now be folded. Simply click somewhere at the left 10 pixels.
    * Foldable sections now have an animated triangle icon that shows the folding state
    * FIX: Fixed encoding problem in webservice column output
    * FIX: Fix output format python for several numeric columns
    * FIX: Fixed searching hosts by aliases/adresses
    * FIX: Remove duplicate entries from Quicksearch
    * FIX: Avoid timed browser reload after execution of exections
    * FIX: Hosttag filter now works in service related views
    * FIX: Added code to prevent injection of bogus varnames
           (This might break code which uses some uncommon chars for varnames)

    BI:
    * FIX: Fix exception when showing BI tree in reporting time warp
    * FIX: Fixed blue triangle link: would show more aggregations,
       if one name was the prefix of another

    Notifications:
    * Blacklisting for services in the felixble notification system
    * FIX: mail with graph plugin: set explicit session.save_path for php
           Fixes instances where the php command couldn't fetch any graphs

    Checks & Agents:
    * diskstat: removed (ever incorrect) latency computation for Linux
    * statgrab_load: support predictive levels, add perf-o-meter
    * ucd_cpu_load: support predictive levels
    * hpux_cpu, blade_bx_load: support predictive levels, add perf-o-meter,
       make WATO-configable
    * check_sql: Database port can now be explicitly set
    * steelhead_perrs: New check for Rivergate Gateways
    * alcatel_power: Check for power supplies on Alcatel switches
    * qnap_disks: New check for Hardisks in Qnap devices
    * Dell Open Manage: SNNP Checks for Physical Disks, CPU and Memory
    * check_tcp: Now able to set custom service description