@@ -26,6 +26,9 @@
     * Wiki Sidebar Snapin: showing navigation and quicksearch. OMD only.
     * Sidebar can now be folded. Simply click somewhere at the left 10 pixels.
     * Foldable sections now have an animated triangle icon that shows the folding state
+    * LDAP: Added option to make group and role sync plugin handle nested
+            groups (only in Active Directory at the moment). Enabling this
+	    feature might increase the sync time a lot - use only when really needed.
     * FIX: Fixed encoding problem in webservice column output
     * FIX: Fix output format python for several numeric columns
     * FIX: Fixed searching hosts by aliases/adresses
@@ -87,6 +90,7 @@
       distributed WATO (available in the "Distributed Monitoring")
     * bulk inventory: display percentage in progress bar
     * New option for full SNMP scan in bulk inventory
+    * LDAP: Added test to validate the configured role sync groups
     * FIX: correct display of number of hosts in bulk inventory
     * FIX: nailed down ".siteid" exception when added new site
     * FIX: fixed setting for locking mode from 'ait' to 'wait'
